source/assets/css/style.css
body {
	background-color:#E0E0E0;
	padding-top: 51px;
}

/* all */
::-webkit-input-placeholder { font-style:italic; }
::-moz-placeholder { font-style:italic; } /* firefox 19+ */
:-ms-input-placeholder { font-style:italic; } /* ie */
input:-moz-placeholder { font-style:italic; }

.outer-center {
    float: right;
    right: 50%;
    position: relative;
}
.inner-center {
    float: right;
    right: -50%;
    position: relative;
}
.clear {
    clear: both;
}

/* Index */
#leftMenu{	
	background-color:rgb(51, 51, 51);
	border-right-color: rgb(16, 16, 16);
	height:100%;
	
}

#content{	
	height:100%;
	overflow:auto;
}

/* End of Index */

/* Login */
.form-signin {
  max-width: 300px;
  padding: 19px 29px 29px;
  margin: 3% auto 20px;
  background-color: #fff;
  border: 2px solid rgb(100,96,96);
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
  -ms-box-shadow: 0 1px 2px rgba(0,0,0,.05);
  box-shadow: 0 1px 2px rgba(0,0,0,.05);
  background-color:rgba(255,255,255,0.7);
}
.form-signin input[type="text"],
.form-signin input[type="password"] {
  font-size: 16px;
  height: auto;
  margin-bottom: 15px;
  padding: 7px 9px;
}
.logo {
  margin: -5% 13% 0%;
  height: 17em;
  width: 15em;
}
/* End of Login */

/* Devices */
.btn-devices{
	float:right;
}

.headder-devices{
	float:left;
}

.addForm{
	text-align:center;
}

.statusSymbol{
	width:20px;
	height:20px;
}

#warningContainer{
	position: absolute;
	top:0px;
	
	width:75%;
	
	margin-top:20px;
	margin-left:12.5%;
	margin-right:12.5%;
}

/* End of Devices */

/* Profile */
.pointEdit-button{
	float:right;
}
/* End of Profile */

